# va-ai-agent

./: .env.example  .flake8  .gitignore  .pylintrc  Makefile  README.md  SETUP.MD  SUMMARY.md  pyproject.toml  requirements.txt
app/: data.py  datastore.py  ingest_data.py  main.py  prompts.py  schemas.py  utils.py
app/agents/: experience_agent.py  flight_agent.py  hotel_agent.py  manager_agent.py
app/services/: ingest_data.py  logger.py
app/ui/: chatbot.py
app/validators/api/: __init__.py  api_key_validator.py
app/validators/response/: __init__.py  agents_response_validator.py
app/validators/user_query/: __init__.py  user_query_validator.py
tests/: __init__.py  test_agents.py  test_datastore.py  test_main.py  test_utils.py  test_validators.py
